--- a/index.css
+++ b/index.css
@@ -1,23 +1,17 @@
 * {
     box-sizing: border-box;
-    padding: 0%;
-    margin: 0%;
 }
 
 .sociales {
     border: 1px solid orange;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     margin: 10px;
     border-radius: 10px;
     background-color: red;
 }
 
-.padre {
-    background-color: rgb(242, 255, 127);
-    text-align: center;
-}
-
-h1 {
-    text-align: center;
+img {
+    width: 50px;
+    height: 50px;
 }
