--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     color: white;
-    background: black;
+    background: url('img/6240268.jpg') no-repeat center center fixed;
 }
 
 .container {
@@ -151,16 +151,16 @@ footer {
 
 @media only screen and (max-width:600px) {
     img {
-        width: 60%;
+        width: 10vw;
     }
-    .container .link .a {}
+    .container .link .a {
+        width: 100vw;
+    }
     .container .kotak {
         width: 20pc;
-        height: 3pc;
     }
     .container .kotak .tautan {
         width: 10pc;
-        height: 4pc;
         margin-left: 9pc;
     }
     footer {
