--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-    min-height: 700px;
+    min-height: 100vh;
     display: grid;
     text-align: center;
 }
@@ -82,7 +82,6 @@ a {
 .container .kotak .img {
     width: 60px;
     height: 60px;
-    /* border: 2px solid red; */
     margin-top: 0.5pc;
     margin-left: 0.5pc;
     transition: 0.3s;
@@ -93,11 +92,6 @@ a {
 }
 
 .container .kotak .tautan {
-    width: 40pc;
-    height: 4.5pc;
-    /* border: 2px solid red; */
-    margin-left: 0pc;
-    margin-top: -4pc;
     text-align: center;
     font-size: 1rem;
     letter-spacing: 5px;
@@ -106,17 +100,7 @@ a {
     transition: 0.5s;
 }
 
-.container .kotak .tautan p {
-    margin-left: -4pc;
-}
-
-.container .kotak .tautan .ytb {
-    margin-left: -7pc;
-}
-
-.container .kotak .tautan .dc {
-    margin-left: -5.5pc;
-}
+.container .kotak .tautan p {}
 
 .container .kotak .tautan:hover {
     letter-spacing: 20px;
@@ -144,11 +128,6 @@ a {
     color: rgb(0, 204, 255);
 }
 
-footer {
-    text-align: center;
-    margin-top: 6pc;
-}
-
 @media only screen and (max-width:600px) {
     img {
         width: 10vw;
@@ -157,11 +136,10 @@ footer {
         width: 100vw;
     }
     .container .kotak {
-        width: 25pc;
+        width: 80vw;
     }
     .container .kotak .tautan {
-        width: 15pc;
-        margin-left: 9pc;
+        margin: 0 auto;
     }
     footer {
         text-align: center;
