--- a/index.css
+++ b/index.css
@@ -21,7 +21,6 @@
         margin: auto;
         text-align: center;
         display: grid;
-        grid-column: repeat(1fr)
     }
     
     a {
@@ -30,8 +29,8 @@
     }
     
     .container .title img {
-        margin: auto;
-        width: 100px
+        width: 30vw;
+        float: left;
     }
     
     .container .title h1 {
@@ -55,12 +54,10 @@
         border: 2px solid rgb(24, 24, 24);
         background: rgb(24, 24, 24);
         width: 40pc;
-        margin: 0 auto;
-        margin-top: 2pc;
         box-shadow: 5px 5px rgb(46, 46, 46);
         transition: 0.5s;
         display: grid;
-        grid-column: ;
+        margin: 1pc auto;
     }
     
     .container .kotak:hover {
@@ -93,12 +90,12 @@
     .container .kotak .tautan p {}
     
     .container .kotak .tautan:hover {
-        letter-spacing: 20px;
+        letter-spacing: 15px;
+        transition: 0.5s;
     }
     
     .container .link .a .kotak .tautan .ig:hover {
         color: red;
-        margin: auto 0;
     }
     
     .container .link .a .kotak .tautan .sama:hover {
@@ -107,7 +104,6 @@
     
     .container .link .a .kotak .tautan .wa:hover {
         color: green;
-        margin: 0 auto;
     }
     
     .container .link .a .kotak .tautan .ytb:hover {}
