--- a/index.css
+++ b/index.css
@@ -23,6 +23,10 @@
         display: grid;
     }
     
+    .container .title img {
+        width: 100%;
+    }
+    
     a {
         text-decoration: none;
         color: white;
