--- a/index.css
+++ b/index.css
@@ -27,23 +27,35 @@ footer {
 }
 
 @media only screen and (max-width:600px) {
+    .container {
+        min-height: 100vh;
+        display: grid;
+        text-align: center;
+    }
+    .container .link .kotak {
+        border: 2px solid rgb(24, 24, 24);
+        background: rgb(24, 24, 24);
+        width: 80vw;
+        box-shadow: 5px 5px rgb(46, 46, 46);
+        transition: 0.5s;
+        display: grid;
+        margin: 1pc auto;
+    }
     .container .kotak .img .imgwa {
         width: 19vw;
         height: 15vw;
     }
-    .container .link .a {
+    .container .link {
+        margin: 0 auto;
+        text-align: center;
         width: 100vw;
     }
-    .container .kotak {
+    .container .link .a {
         width: 80vw;
+        margin: 0 auto;
     }
     .container .kotak .tautan {
         margin: 0 auto;
-    }
-    .container {
-        min-height: 90vh;
-        display: grid;
-        text-align: center;
     }
     .container .title {
         margin: 8vh auto 0 auto;
@@ -62,22 +74,9 @@ footer {
         text-transform: uppercase;
         font-size: 2.5rem;
     }
-    .container .link {
-        margin: 0 auto;
-        text-align: center;
-    }
     .container .link .a {
         margin: 0 auto;
         text-align: center;
-    }
-    .container .kotak {
-        border: 2px solid rgb(24, 24, 24);
-        background: rgb(24, 24, 24);
-        width: 90vw;
-        box-shadow: 5px 5px rgb(46, 46, 46);
-        transition: 0.5s;
-        display: grid;
-        margin: 1pc auto;
     }
     .container .kotak:hover {
         border: 2px solid rgb(255, 255, 255);
@@ -96,7 +95,6 @@ footer {
         text-transform: uppercase;
         font-weight: bolder;
         transition: 0.5s;
-        display: inline-block;
     }
     .container .kotak .tautan p {}
     .container .kotak .tautan:hover {
@@ -112,7 +110,6 @@ footer {
     .container .link .a .kotak .tautan .wa:hover {
         color: green;
     }
-    .container .link .a .kotak .tautan .ytb:hover {}
 }
 
 @media screen and (max-width:1000px) {
