--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ footer {
 
 @media only screen and (max-width:600px) {
     .container {
-        height: 90vh;
+        height: 100vh;
         display: grid;
         text-align: center;
     }
@@ -37,6 +37,13 @@ footer {
         text-align: center;
         display: grid;
         max-height: 10vw;
+    }
+    .container .title img {
+        width: 30vw;
+        height: 30vw;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
     .container .title h1 {
         text-align: center;
@@ -74,12 +81,6 @@ footer {
     }
     .container .kotak .tautan {
         margin: 0 auto;
-    }
-    .container .title img {
-        width: 25vw;
-        position: absolute;
-        top: 0;
-        left: 0;
     }
     .container .link .a {
         margin: 0 auto;
@@ -119,7 +120,7 @@ footer {
     }
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (min-width:700px) {
     .container {
         min-height: 100vh;
         display: grid;
