--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@
 body {
     font-family: 'Poppins', sans-serif;
     color: white;
-    background: url('img/6240268.jpg') repeat
 }
 
 * {
@@ -28,9 +27,10 @@ footer {
 
 @media only screen and (max-width:680px) {
     .container {
-        height: 100vh;
+        height: 95vh;
         display: grid;
         text-align: center;
+        background: url('img/6240268.jpg') no-repeat;
     }
     .container .title {
         margin: 8vh auto 0 auto;
