--- a/index.css
+++ b/index.css
@@ -11,6 +11,103 @@ body {
     box-sizing: border-box;
 }
 
+.container {
+    min-height: 100vh;
+    display: grid;
+    text-align: center;
+}
+
+.container .title {
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 2rem;
+    height: 10vh;
+}
+
+.container .title img {
+    width: 10vw;
+    height: 10vw;
+    position: absolute;
+    top: 0;
+    left: 15vw;
+}
+
+.container .title h3 {
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+
+.container .link {
+    margin: 2vw auto;
+    text-align: center;
+    width: 100vw;
+}
+
+.container .link .a {
+    margin: 0 auto;
+    text-align: center;
+    width: 70vw;
+    height: auto;
+}
+
+.container .kotak .img .imgwa {
+    width: 6vw;
+    height: 5vw;
+}
+
+.container .kotak {
+    border: 2px solid rgb(24, 24, 24);
+    background: rgb(24, 24, 24);
+    width: 55vw;
+    height: 10vh;
+    box-shadow: 5px 5px rgb(46, 46, 46);
+    transition: 0.5s;
+    display: inline-block;
+    margin: 1vw auto;
+}
+
+.container .kotak .img img {
+    width: 2vw;
+    Height: 2vw;
+}
+
+.container .kotak:hover {
+    border: 2px solid rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
+    box-shadow: 10px 10px rgb(87, 87, 87);
+    color: black;
+}
+
+.container .kotak .img:hover {
+    transform: rotate(35deg);
+    transition: 0.5s;
+}
+
+.container .kotak .tautan {
+    text-align: center;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    transition: 0.5s;
+    display: inline-block;
+}
+
+.container .kotak .tautan p {
+    font-size: 1.5rem;
+}
+
+.container .kotak .tautan:hover {
+    letter-spacing: 15px;
+    transition: 0.5s;
+}
+
+.container .link .a .kotak .tautan .ig:hover {
+    color: red;
+}
+
 .container .kotak img {
     width: 10vw;
     height: 10vw;
@@ -73,40 +170,40 @@ footer {
         border: 2px solid rgb(24, 24, 24);
         background: rgb(24, 24, 24);
         width: 80vw;
+        height: 8vh;
         box-shadow: 5px 5px rgb(46, 46, 46);
         transition: 0.5s;
         display: grid;
+        grid-template-columns: 30vw 30vw;
         margin: 1vw auto 0 auto;
     }
-    .container .link .a .kotak .img .imgwa {
-        width: 19vw;
-        height: 14vw;
-        position: relative;
-    }
-    .container .kotak:hover {
+    .container .link .a .kotak:hover {
         border: 2px solid rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
+        background: rgba(218, 207, 201, 0.938);
         box-shadow: 10px 10px rgb(87, 87, 87);
         color: black;
+    }
+    .container .link .a .kotak .img img {
+        width: 10vw;
+        height: 10vw;
+        margin: 1vh auto;
     }
     .container .kotak .img:hover {
         transform: rotate(40deg);
         transition: 0.5s;
     }
     .container .kotak .tautan {
+        transition: 0.2s;
+        margin: 0 auto;
         text-align: center;
-        font-size: 1rem;
-        letter-spacing: 5px;
-        text-transform: uppercase;
-        font-weight: bolder;
-        transition: 0.5s;
     }
     .container .kotak .tautan p {
-        margin-bottom: 1vh;
+        margin: 0 auto;
+        font-size: 1.5rem;
     }
     .container .kotak .tautan:hover {
         letter-spacing: 15px;
-        transition: 0.5s;
+        transition: 0.8s;
     }
     .container .link .a .kotak .tautan .ig:hover {
         color: red;
@@ -116,90 +213,5 @@ footer {
     }
     .container .link .a .kotak .tautan .wa:hover {
         color: green;
-    }
-}
-
-@media screen and (min-width:680px) {
-    .container {
-        min-height: 100vh;
-        display: grid;
-        text-align: center;
-    }
-    .container .title {
-        text-align: center;
-        color: white;
-        text-transform: uppercase;
-        font-size: 2rem;
-        height: 10vh;
-    }
-    .container .title img {
-        width: 10vw;
-        height: 10vw;
-        position: absolute;
-        top: 0;
-        left: 15vw;
-    }
-    .container .title h3 {
-        text-align: center;
-        color: white;
-        text-transform: uppercase;
-        font-size: 1.5rem;
-    }
-    .container .link {
-        margin: 2vw auto;
-        text-align: center;
-        width: 100vw;
-    }
-    .container .link .a {
-        margin: 0 auto;
-        text-align: center;
-        width: 70vw;
-        height: auto;
-    }
-    .container .kotak .img .imgwa {
-        width: 6vw;
-        height: 5vw;
-    }
-    .container .kotak {
-        border: 2px solid rgb(24, 24, 24);
-        background: rgb(24, 24, 24);
-        width: 70vw;
-        height: 10vh;
-        box-shadow: 5px 5px rgb(46, 46, 46);
-        transition: 0.5s;
-        display: inline-block;
-        margin: 1vw auto;
-    }
-    .container .kotak img {
-        width: 3vw;
-        display: inline;
-    }
-    .container .kotak:hover {
-        border: 2px solid rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
-        box-shadow: 10px 10px rgb(87, 87, 87);
-        color: black;
-    }
-    .container .kotak .img:hover {
-        transform: rotate(40deg);
-        transition: 0.5s;
-    }
-    .container .kotak .tautan {
-        text-align: center;
-        letter-spacing: 5px;
-        text-transform: uppercase;
-        font-weight: bolder;
-        transition: 0.5s;
-        display: inline-block;
-    }
-    .container .kotak .tautan p {
-        font-size: 1.5rem;
-    }
-    .container .kotak .tautan:hover {
-        letter-spacing: 15px;
-        transition: 0.5s;
-    }
-    .container .link .a .kotak .tautan .ig:hover {
-        color: red;
     }
 }
